src/components/NewClientForm.module.css
.form {
  background-color: #bfc9b0;
  display: flex;
  gap: 1rem;
  flex-direction: column;
  align-items: center;
  width: 20rem;
  justify-self: center;
  padding: 1rem;
  position: fixed;

  border-radius: 12px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
}
.form p {
  width: 100%;
}

.form label {
  display: block;
  margin-bottom: 0.5rem;
  color: #0c1f0b;
  font-weight: bold;
}

.form input,
.form select {
  display: block;
  width: 100%;
  padding: 0.5rem;
  border-radius: 6px;
  border: none;
  background-color: #d3dac8;
  color: #11130f;
}

.actions {
  display: flex;
  justify-content: flex-end;
  width: 100%;
  gap: 0.5rem;
  font-weight: 500;
  font-size: 1rem;
}

.actions button[type="button"] {
  background-color: transparent;
  border: none;
}
.addbtn,
.cancel {
  font-size: 16px;
  padding: 8px 14px;
  border-radius: 6px;
  border: solid 1px #b99a52;
  background-color: #9dac85;
}

